--- a/freecodecamp/surveyform/styles.css
+++ b/freecodecamp/surveyform/styles.css
@@ -41,6 +41,7 @@ select{
     margin: 0.25rem 0 0.25rem;
     width: 100%;
     min-height: 2em;
+    border-radius: 2px;
   }
 input, textarea {
     background-color: #ffffff;
