--- a/freecodecamp/responsivewebdesing/surveyform/styles.css
+++ b/freecodecamp/responsivewebdesing/surveyform/styles.css
@@ -1,11 +1,10 @@
 body {
-    max-width: 27em;
+    max-width: 35em;
     margin: 0 auto 0 auto;
-    background-color: #000000;
-    color: #ffffff;
+    background-color: #fefefe;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1em;
-    padding: 3em;
+    padding: 1em;
   }
 h1 {
     margin: auto auto auto auto;
@@ -81,9 +80,9 @@ a {
 .logo {
     display: flex;
     margin: auto;
-    max-width: 10%;
-    margin-bottom: 2em;
-    margin-top: 0em;
+    max-width: 15%;
+    margin-bottom: 1em;
+    margin-top: 1em;
 }
 span{
     font-size: 1.2em;
@@ -97,7 +96,7 @@ span{
 img{
     display: flex;
     margin: auto;
-    max-width: 75%;
+    max-width: 100%;
     margin-bottom: 3em;
     margin-top: 3em;  
 }
@@ -111,4 +110,11 @@ img{
     margin: 2rem 0 2rem;
     text-align: center;
 
+}
+#backgroundcolor{
+    background-color: #000000;
+    color: #ffffff;
+    padding: 1em;
+    border-radius: 10px;
+    
 }
